# acp-bridge

./: .gitignore  CHANGELOG.md  LICENSE  README.md  TESTING.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
.kiro/specs/session-refactor/: .config.kiro  design.md  requirements.md  tasks.md
acp_bridge/: agent.py  bridge.py  config.py  evaluator.py  feishu.py  handler.py  handler_command.py  handler_message.py  handler_permission.py  main.py  session.py  utils.py
agent_bridge/: agent.py  bridge.py  handler.py  handler_command.py  handler_message.py  handler_permission.py  main.py  session.py
scripts/: pre-commit  setup-hooks.sh  test_feishu_integration.py
src/: agent.py  bridge.py  config.py  feishu.py  handler.py  handler_command.py  handler_message.py  handler_permission.py  handler_shell.py  main.py  session.py
tests/: test_agent.py  test_bridge.py  test_config.py  test_feishu.py  test_handler.py  test_handler_command.py  test_handler_message.py  test_handler_permission.py  test_session.py  test_utils.py
tests_e2e/: test_e2e.py
