[project]
name = "agent-bridge"
version = "0.1.0"
description = "Bridge Feishu to ACP-compatible agents with automatic session management for non-developers."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "lark-oapi>=1.5.3",
    "toml>=0.10.2",
]

[project.scripts]
agent-bridge = "src.main:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
