[project]
name = "agent-bridge"
version = "0.3.0"
description = "Bridge Feishu to ACP-compatible agents with automatic session management for non-developers."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agent-client-protocol>=0.9.0",
    "httpx>=0.28.1",
    "keyring>=25.7.0",
    "keyrings-alt>=5.0.2",
    "lark-oapi>=1.5.3",
    "pyyaml>=6.0.3",
    "toml>=0.10.2",
]

[project.scripts]
agent-bridge = "agent_bridge.main:main"

[dependency-groups]
dev = [
    "hypothesis>=6.100.0",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:websockets",
    "ignore::DeprecationWarning:lark_oapi",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F811"]

[tool.pyright]
pythonVersion = "3.11"
include = ["agent_bridge"]
