[project]
name = "acp-bridge"
version = "1.4.0"
description = "Bridge Feishu to ACP-compatible agents with automatic session management for non-developers."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agent-client-protocol>=0.9.0",
    "httpx>=0.28.1",
    "keyring>=25.7.0",
    "keyrings-alt>=5.0.2",
    "lark-oapi>=1.5.3",
    "matplotlib>=3.10.8",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pillow>=12.1.1",
    "pyyaml>=6.0.3",
    "pyzbar>=0.1.9",
    "scipy>=1.17.1",
    "toml>=0.10.2",
]

[project.scripts]
acp-bridge = "acp_bridge.main:main"

[dependency-groups]
dev = [
    "hypothesis>=6.100.0",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["acp_bridge"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:websockets",
    "ignore::DeprecationWarning:lark_oapi",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F811"]

[tool.pyright]
pythonVersion = "3.11"
include = ["acp_bridge"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
changelog_file = "CHANGELOG.md"
commit_message = "chore(release): v{version}"
tag_format = "v{version}"
